--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
       url: jdbc:mysql://localhost:3306/myblog?characterEncoding=UTF-8
       username: root
-      password: 123456
+      password: b312030060403
       #schema: database/import.sql
       #sql-script-encoding: utf-8
       driver-class-name: com.mysql.jdbc.Driver
