--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
       url: jdbc:mysql://localhost:3306/myblog?characterEncoding=UTF-8
       username: root
-      password: b312030060403
+      password: 123456
       #schema: database/import.sql
       #sql-script-encoding: utf-8
       driver-class-name: com.mysql.jdbc.Driver
@@ -10,3 +10,24 @@ spring:
     thymeleaf:
        cache: false
        mode: LEGACYHTML5
+
+    #redis基础配置
+    redis:
+      database: 5
+      host: 19.29.80.50
+      password: admin.1231
+      port: 7001
+      timeout: 3000 # 连接超时时间 单位 ms（毫秒）
+
+      #redis线程池设置
+      pool:
+        max-idle: 500 #连接池中的最大空闲连接，默认值也是8
+        min-idle: 50  #连接池中的最小空闲连接，默认值也是0。
+        max-active: 2000 #如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)
+        max-wait: 1000  # 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时。如果超过等待时间，则直接抛出JedisConnectionException
+
+      #redis哨兵设置
+      # Redis服务器master的名字
+      #spring.redis.sentinel.master=master8026
+      #redis-sentinel的配置地址和端口
+      #spring.redis.sentinel.nodes=10.189.80.25:26379,10.189.80.26:26379,10.189.80.27:26378
